# python-serviceplatformen

./: .pylintrc  README.md  changelog.md  pyproject.toml
.github/workflows/: Linting.yml
python_serviceplatformen/: authentication.py  digital_post.py  message_broker.py
python_serviceplatformen/memo/: core.py  data_types.py  dmv.py  form.py  gln.py  grd.py  kle.py  sor.py  udd.py
python_serviceplatformen/models/: message.py  xml_util.py
tests/: test_digital_post.py  test_message_xml.py
tests/message_xml/: MeMo_Full_Example.xml  MeMo_Minimum_Example.xml  MeMo_NemSMS.xml  MeMo_with_attachment.xml
